Fix mid-argument list callback user data expecting a tuple

Ensure user data arguments are always packed into a tuple during callback
marshaling. This fixes cases where there is mid-argument user data which is
not in the form of a variable length tuple.

https://bugzilla.gnome.org/show_bug.cgi?id=722104